# financial_platform

./: README.md  SPEC_MAPPING.md  acceptance.md  artifact.md  author_output.md  brief.md  coordinate_output.md  execute_output.md  problem.md  problems.md  pyproject.toml
src/finance_platform/: __init__.py
src/finance_platform/amortization/: __init__.py  calculator.py  domain_events.py  exceptions.py  models.py  repository.py  routes.py  scheduler.py  schemas.py  service.py  state_machine.py
src/finance_platform/approvals/: __init__.py  exceptions.py  models.py  repository.py  schemas.py
src/finance_platform/audit/: __init__.py
src/finance_platform/auth/: __init__.py  jwt.py  rbac.py
src/finance_platform/carry_forward/: __init__.py
src/finance_platform/cli/: __init__.py  approval_commands.py  company_commands.py  expense_commands.py  main.py  utils.py
src/finance_platform/config/: __init__.py
src/finance_platform/db/: __init__.py  session.py
src/finance_platform/debts/: __init__.py
src/finance_platform/errors/: __init__.py  base.py  codes.py  exceptions.py  handler.py  registry.py
src/finance_platform/expenses/: __init__.py
src/finance_platform/frontend/: __init__.py  routes.py
src/finance_platform/fx/: __init__.py
src/finance_platform/identity/: __init__.py  company_switch.py  leave_check.py  models.py  service.py  token_manager.py  verification.py
src/finance_platform/logging/: __init__.py  binder.py  configuration.py  context.py  correlation.py  decorators.py  filters.py  handlers.py  logger.py  metrics.py  middleware.py  processors.py
(+130 files in other folders)
